--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kjankiewicz.android_05c02" >
 
+    <uses-permission android:name="com.example.kjankiewicz.android_05c01.MYWEBVIEW_PERMISSION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/oak"
